// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<svg
  className="Spinner Spinner--default"
  data-test-id="cf-ui-spinner"
  style={Object {}}
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Loading…
  </title>
  <path
    d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
  />
  <path
    d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
    style={
      Object {
        "opacity": 0.4,
      }
    }
  />
</svg>
`;

exports[`renders the component with a custom size 1`] = `
<svg
  className="Spinner Spinner--default"
  data-test-id="cf-ui-spinner"
  style={
    Object {
      "height": "42px",
      "width": "42px",
    }
  }
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Loading…
  </title>
  <path
    d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
  />
  <path
    d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
    style={
      Object {
        "opacity": 0.4,
      }
    }
  />
</svg>
`;

exports[`renders the component with an additional class name 1`] = `
<svg
  className="Spinner my-extra-class Spinner--default"
  data-test-id="cf-ui-spinner"
  style={Object {}}
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Loading…
  </title>
  <path
    d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
  />
  <path
    d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
    style={
      Object {
        "opacity": 0.4,
      }
    }
  />
</svg>
`;

exports[`renders the component with the size "large" 1`] = `
<svg
  className="Spinner Spinner--large Spinner--default"
  data-test-id="cf-ui-spinner"
  style={Object {}}
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Loading…
  </title>
  <path
    d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
  />
  <path
    d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
    style={
      Object {
        "opacity": 0.4,
      }
    }
  />
</svg>
`;

exports[`renders the component with the size "small" 1`] = `
<svg
  className="Spinner Spinner--small Spinner--default"
  data-test-id="cf-ui-spinner"
  style={Object {}}
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Loading…
  </title>
  <path
    d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
  />
  <path
    d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
    style={
      Object {
        "opacity": 0.4,
      }
    }
  />
</svg>
`;
